2001-02-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics (build_rli_array_helper): Added copying fields
	from the persistent rli that aren't yet defined.
	(main) Updating printing of urls so that only those comics the
	user specified get their urls printed.

2001-02-18  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%post data): Added check for deprecated modules
	(%files data): Added documentation files
	* doc/netcomics.lsm (Description): Updated for 0.13.1
	* Makefile ($(DEBFILE)): Added su-ing to root & chowning the deb pkg.
	(label): Updated tagging for cvs.
	(dist): Updated list of things to do after making the distributions.

2001-02-16  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doodie (doodie): Fixed current day retrieval.

2001-02-14  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/sketch (sketch): Updated exceptions list.
	* lib/comicspage (herb & bound): Changed ampersand to "and" so
	shell commands wouldn't need the "&" in their names escaped.
	* lib/kingfeatures (sroper): Changed ampersand to "and" so
	shell commands wouldn't need the "&" in their names escaped.
	* lib/keenspot (alice): Fixed passing of the size & main.
	(adventure): Disabled.
	* lib/elf_life (elf): Fixed the type field regexp
	(thanks to Jeremy Bettis).
	* lib/dr_fun (drfun): Disabled the size
	(thanks to Jeremy Bettis).
	* lib/clan_cats: file type can also be jpg
	(thanks to Jeremy Bettis).
	* lib/norm (nm): Updated the sunday size thanks to 
	Brent Nordquist.
	* netcomics (skip_rli): Added logic to catch when the user
	unspecified some comics (thanks to Jeremy Bettis).

2001-02-12  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/sourcewars: Added Daemon News' "Source Wars".

2001-02-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/comicspage_ed (jeffm): Removed Jeff MacNelly thanks to Sizer.
	* lib/kingfeatures: Removed Boner's Ark, Bringing Up Father, and