@@ -1,3 +1,8 @@
+2001-02-20  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
+
+	* Makefile (../$(DEBFILELINK)): Added making a symlink to the deb
+	file with a filename that's acceptable by metalab.unc.edu.
+
 2001-02-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* netcomics (build_rli_array_helper): Added copying fields
